--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.social.facebook.appId=611418105944266
 spring.social.facebook.appSecret=427fc23e799c251f04a7e578a09662f6
 
+spring.social.linkedin.app-id=86fehsk97mj3n7
+spring.social.linkedin.app-secret=9KCWoMJT2bXVgt50
