--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.social.facebook.appId=611418105944266
 spring.social.facebook.appSecret=427fc23e799c251f04a7e578a09662f6
 
+spring.social.twitter.app-id=M4Lwd8NlngS4AF5bdCVO1cw9V
+spring.social.twitter.app-secret=cc3R0ur1y9HhQhbZV6SmltwNxZxQ7nzupFOk1dF3fOBjJRWJtv
+
 spring.social.linkedin.app-id=86fehsk97mj3n7
 spring.social.linkedin.app-secret=9KCWoMJT2bXVgt50
+
+spring.social.instagram.appId=4c80220668704a6c8bf38c03a03cfcb5
+spring.social.instagram.appSecret=6c63fd2394c446618a4cdcae0295b72f
